src/objects/GDP_File_Delivery__c.object
<CustomObject>
    <description>Will receive the Delivery Notice from the GSS Java Process in Amazon</description>
    <fields>
        <fullName>Delivery_Date_Text__c</fullName>
        <label>Delivery Date Text</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Frequency__c</fullName>
        <description>Delivery Frequency of file group (merged in notification email) 
Should be one of - Daily, Weekly, Semi-Monthly, Monthly</description>
        <inlineHelpText>Delivery Frequency of file group (merged in notification email) 
Should be one of - Daily, Weekly, Semi-Monthly, Monthly</inlineHelpText>
        <label>Delivery Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>File Name as sent to IINET</description>
        <inlineHelpText>File Name as sent to IINET</inlineHelpText>
        <label>File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Size_KB__c</fullName>
        <description>File size in kilobytes</description>
        <formula>IF(ISBLANK(File_Size__c)
   , null
   , CEILING(File_Size__c / 1024)
)</formula>
        <inlineHelpText>File size in kilobytes</inlineHelpText>
        <label>File Size (KB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <description>The original size of the original file in bytes as reported from AWS.</description>
        <inlineHelpText>The original file size in bytes as reported from AWS.</inlineHelpText>
        <label>File Size (bytes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File Specification</label>
        <referenceTo>GDP_File_Description__c</referenceTo>
        <relationshipLabel>GDP File Deliveries</relationshipLabel>
        <relationshipName>GDP_File_Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Subscription__r.Zuora__CustomerAccount__r.Contact__r.FirstName</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSS_Subscription_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSS Subscription Detail</label>
        <referenceTo>GSS_Subscription_Detail__c</referenceTo>
        <relationshipLabel>GDP File Deliveries</relationshipLabel>
        <relationshipName>GDP_File_Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_of_files_delivered__c</fullName>
        <description>List of files delivered (merged in email nofification)</description>
        <inlineHelpText>List of files delivered (merged in email nofification)</inlineHelpText>
        <label>List of files delivered</label>
        <length>3276</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message in case there is a failure to delivery the file from amazon to iinet fro example</description>
        <inlineHelpText>Message in case there is a failure to delivery</inlineHelpText>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <description>0 - Do not notify
1 - Notify client by email
2 - Notification to client sent</description>
        <inlineHelpText>0 - Do not notify
1 - Notify client by email
2 - Notification to client sent</inlineHelpText>
        <label>Notification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_of_file_in_delivery__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity of file in delivery group</description>
        <label>Quantity of file in delivery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>GDP File Deliveries</relationshipLabel>
        <relationshipName>GDP_File_Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Email__c</fullName>
        <description>For email nofitication</description>
        <inlineHelpText>For email nofitication</inlineHelpText>
        <label>Technical Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Name__c</fullName>
        <description>Merged in email notification</description>
        <inlineHelpText>Merged in email notification</inlineHelpText>
        <label>Technical Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GDP File Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subscription__c</columns>
        <columns>File_Specification__c</columns>
        <columns>File_Name__c</columns>
        <columns>File_Size_KB__c</columns>
        <columns>Delivery_Frequency__c</columns>
        <columns>Quantity_of_file_in_delivery__c</columns>
        <columns>Message__c</columns>
        <columns>Status__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>00-All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed</fullName>
        <columns>NAME</columns>
        <columns>Subscription__c</columns>
        <columns>File_Specification__c</columns>
        <columns>File_Name__c</columns>
        <columns>File_Size_KB__c</columns>
        <columns>Delivery_Frequency__c</columns>
        <columns>Quantity_of_file_in_delivery__c</columns>
        <columns>Message__c</columns>
        <columns>Status__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>05-All Completed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Failed</fullName>
        <columns>NAME</columns>
        <columns>Subscription__c</columns>
        <columns>File_Specification__c</columns>
        <columns>File_Name__c</columns>
        <columns>File_Size_KB__c</columns>
        <columns>Delivery_Frequency__c</columns>
        <columns>Quantity_of_file_in_delivery__c</columns>
        <columns>Message__c</columns>
        <columns>Status__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>02-Failed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>GSS_Subscription_Detail__c</columns>
        <columns>Subscription__c</columns>
        <columns>File_Specification__c</columns>
        <columns>File_Name__c</columns>
        <columns>File_Size_KB__c</columns>
        <columns>Delivery_Frequency__c</columns>
        <columns>Quantity_of_file_in_delivery__c</columns>
        <columns>Message__c</columns>
        <columns>Status__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>01-In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today_s_Deliveries</fullName>
        <columns>NAME</columns>
        <columns>Subscription__c</columns>
        <columns>File_Specification__c</columns>
        <columns>File_Name__c</columns>
        <columns>File_Size_KB__c</columns>
        <columns>Notification__c</columns>
        <columns>Quantity_of_file_in_delivery__c</columns>
        <columns>Message__c</columns>
        <columns>Status__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>03-Today&apos;s Deliveries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X04_Yesterday_s_Deliveries</fullName>
        <columns>NAME</columns>
        <columns>Subscription__c</columns>
        <columns>File_Specification__c</columns>
        <columns>File_Name__c</columns>
        <columns>File_Size_KB__c</columns>
        <columns>Delivery_Frequency__c</columns>
        <columns>Quantity_of_file_in_delivery__c</columns>
        <columns>Message__c</columns>
        <columns>Status__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>04-Yesterday&apos;s Deliveries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X06_Yesterday_s_and_Today_s_Deliveries</fullName>
        <columns>NAME</columns>
        <columns>Subscription__c</columns>
        <columns>File_Specification__c</columns>
        <columns>File_Name__c</columns>
        <columns>File_Size__c</columns>
        <columns>File_Size_KB__c</columns>
        <columns>Delivery_Frequency__c</columns>
        <columns>Quantity_of_file_in_delivery__c</columns>
        <columns>Message__c</columns>
        <columns>Status__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY,TODAY</value>
        </filters>
        <label>06-Yesterday&apos;s and Today&apos;s Deliveries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ZZZZ_Random_Search</fullName>
        <columns>NAME</columns>
        <columns>Subscription__c</columns>
        <columns>File_Specification__c</columns>
        <columns>File_Name__c</columns>
        <columns>File_Size_KB__c</columns>
        <columns>Notification__c</columns>
        <columns>Quantity_of_file_in_delivery__c</columns>
        <columns>Message__c</columns>
        <columns>Status__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>equals</operation>
            <value>2/9/2021</value>
        </filters>
        <filters>
            <field>File_Specification__c</field>
            <operation>contains</operation>
            <value>Daily</value>
        </filters>
        <label>ZZZZ-Random Search</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ZZZ_Deliveries_With_No_Link_to_Z_Sub</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>GSS_Subscription_Detail__c</columns>
        <columns>Subscription__c</columns>
        <columns>File_Specification__c</columns>
        <columns>File_Name__c</columns>
        <columns>File_Size_KB__c</columns>
        <columns>Delivery_Frequency__c</columns>
        <columns>Quantity_of_file_in_delivery__c</columns>
        <columns>Message__c</columns>
        <columns>Status__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subscription__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>GSS_Subscription_Detail__c</field>
            <operation>equals</operation>
        </filters>
        <label>ZZZ: Deliveries With No Link to Z-Sub</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ZZ_Search_by_GSS_Subscription_Detail</fullName>
        <columns>NAME</columns>
        <columns>GSS_Subscription_Detail__c</columns>
        <columns>Subscription__c</columns>
        <columns>File_Specification__c</columns>
        <columns>File_Name__c</columns>
        <columns>File_Size_KB__c</columns>
        <columns>Delivery_Frequency__c</columns>
        <columns>Quantity_of_file_in_delivery__c</columns>
        <columns>Message__c</columns>
        <columns>Status__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GSS_Subscription_Detail__c</field>
            <operation>equals</operation>
            <value>A-S00000433</value>
        </filters>
        <filters>
            <field>Subscription__c</field>
            <operation>equals</operation>
        </filters>
        <label>ZZ: Search by GSS Subscription Detail</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FD-{000000000}</displayFormat>
        <label>GDP File Delivery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDP File Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>